--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,11 @@
             <artifactId>jersey-server</artifactId>
             <version>2.39</version>
         </dependency>
-
+        <!--         <dependency> -->
+        <!--             <groupId>org.glassfish.jersey.containers</groupId> -->
+        <!--             <artifactId>jersey-containers-grizzly2-http</artifactId> -->
+        <!--             <version>2.39</version> -->
+        <!--         </dependency> -->
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
@@ -101,7 +105,6 @@
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>2.39</version>
         </dependency>
-
     </dependencies>
 
 </project>
