--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,15 @@
         </dependency>
     </dependencies>
 
+
+    <build>
+        <resources>
+            <resource>
+                <directory>
+                    src/main/resources
+                </directory>
+            </resource>
+        </resources>
+    </build>
+
 </project>
